Automatically backed up by Learn

--- a/app/views/landmarks/new.erb
+++ b/app/views/landmarks/new.erb
@@ -1,6 +1,15 @@
 <h2>Create New Landmark</h2>
 
 <!-- add content here -->
+<form action="/landmarks" method="post">
+  <label for="landmark[name]">Name: </label>
+  <input type="text" name="landmark[name]" id="landmark_name" value="">
+  <label for="landmark[year_completed]">Year Completed: </label>
+  <input type="text" name="landmark[year_completed]" id="landmark_year_completed" value="">
+
+
+  <input type="submit" name="submit" value="Create New Landmark">
+</form>
 
 <a class="button" href="/figures">Landmarks</a>
 <a class="button" href="/">Home</a>
