Automatically backed up by Learn

--- a/app/views/landmarks/index.erb
+++ b/app/views/landmarks/index.erb
@@ -3,7 +3,7 @@
 <!-- add content here -->
 
 <%@landmarks.all.each_with_index do |landmark, index|%>
-  <a href="/landmarks/<%=landmark.id%>"><%=index+1%>. <%=landmark.name%></a><br>
+  <a href="/landmarks/<%=landmark.id%>"><%=index+1%>. <%=landmark.name%> <%=landmark.year_completed%></a><br>
 <%end%>
 
 <a class="button" href="/figures">Figures</a>
