--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -5,6 +5,9 @@
 <form action="/landmarks/<%= @landmark.id %>" method="post">
   <input type="text" name="_method" value="patch">
 
+  <label for="landmark[name]">Name: </label>
+  <input type="text" name="landmark[name]" id="landmark_name" value="">
+
 </form>
 
 <a class="button" href="/figures">Landmarks</a>
