--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -8,6 +8,9 @@
   <label for="landmark[name]">Name: </label>
   <input type="text" name="landmark[name]" id="landmark_name" value="">
 
+  <label for="landmark[year_completed]">Year Completed: </label>
+  <input type="text" name="landmark[year_completed]" id="landmark_year_completed" value="">
+
 </form>
 
 <a class="button" href="/figures">Landmarks</a>
