Automatically backed up by Learn

--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -9,7 +9,7 @@
   <input type="text" name="landmark[name]" id="landmark_name" value="">
 
   <label for="landmark[year_completed]">Year Completed: </label>
-  <input type="text" name="landmark[year_completed]" id="landmark_year_completed" value="">
+  <input type="text" name="landmark[year_completed]" id="landmark_year_completed" value="<%= @landmark.year_completed.to_s %>">
 
 </form>
 
