--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -6,7 +6,7 @@
   <input type="text" name="_method" value="patch">
 
   <label for="landmark[name]">Name: </label>
-  <input type="text" name="landmark[name]" id="landmark_name" value="">
+  <input type="text" name="landmark[name]" id="name" value="">
 
   <label for="landmark[year_completed]">Year Completed: </label>
   <input type="text" name="landmark[year_completed]" id="landmark_year_completed" value="<%= @landmark.year_completed.to_s %>">
