--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -9,7 +9,7 @@
   <input type="text" name="landmark[name]" id="name" value="<%= @landmark.name %>">
 
   <label for="landmark[year_completed]">Year Completed: </label>
-  <input type="text" name="landmark[year_completed]" id="ear_completed" value="<%= @landmark.year_completed.to_s %>">
+  <input type="text" name="landmark[year_completed]" id="year_completed" value="<%= @landmark.year_completed.to_s %>">
 
 </form>
 
