--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -11,6 +11,8 @@
   <label for="landmark[year_completed]">Year Completed: </label>
   <input type="text" name="landmark[year_completed]" id="year_completed" value="<%= @landmark.year_completed.to_s %>">
 
+  <input type="submit" name="" value="Edit Landmark">
+
 </form>
 
 <a class="button" href="/figures">Landmarks</a>
